--- a/src/i18n/ko-KR.json
+++ b/src/i18n/ko-KR.json
@@ -487,7 +487,7 @@
     "content1": "A Plug and Play Blockchain for Bitcoin",
     "content2": "Powered by <span style='font-style: italic'>{ token1 }</span>  and  <span style='font-style: italic'>{ token2 }</span>  ",
     "button": "Launch Bouncebit",
-    "token1": "$BTCB",
+    "token1": "$BTC",
     "token2": "$AUCTION"
   }
 }
